# pf5_jeu_de_cartes

./: Rapport.md
src/: Affichage.ml  Affichage.mli  Colonnes.ml  Colonnes.mli  Coup.ml  Coup.mli  Depot.ml  Depot.mli  Fichier.ml  Fichier.mli  Fifo.ml  Initialisation.ml  Initialisation.mli  Optimisation.ml  Optimisation.mli  Recherche.ml  Recherche.mli  Registres.ml  Registres.mli  Types.ml  Types.mli  XpatRandom.ml  XpatSolver.ml  dune
