(env (_ (flags :standard -w -27-26-32-33)))
(executable (name XpatSolver) (modules XpatSolver) (libraries Types Colonnes Registres Affichage Depot Initialisation Coup Fichier Recherche Optimisation) (modes byte exe))
(library (name Optimisation) (modules Optimisation) (libraries Types Depot Registres Coup Recherche))
(library (name Recherche) (modules Recherche) (libraries Types Depot Registres Coup))
(library (name Fichier) (modules Fichier) (libraries Types Depot Registres))
(library (name Coup) (modules Coup) (libraries Types Depot Registres))
(library (name Initialisation) (modules Initialisation) (libraries Types Colonnes Registres Depot))
(library (name Depot) (modules Depot) (libraries Types Registres))
(library (name Affichage) (modules Affichage) (libraries Types))
(library (name Registres) (modules Registres) (libraries Types))
(library (name Colonnes) (modules Colonnes) (libraries Types))
(library (name Types) (modules Types) (libraries XpatLib))
(library (name XpatLib) (modules Fifo FArray PArray Card XpatRandom))
